login and logout completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,19 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'tweetapp:addtweet' %}">Add Tweet</a>
               </li>
+              <!--
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'tweetapp:addtweetbyform' %}">Add Tweet By Form</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'tweetapp:addtweetbymodelform' %}">Add Tweet By Model Form</a>
+              </li>
+              -->
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}?next=/">Logout</a>
               </li>
             </ul>
           </div>
