signup process completed

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
 
 {%block content%}
-{%if user.is_authenticated%}
-<h2 style="padding: 10px;">Welcome {{user.username}}</h2>
 
-{%else%}
-
-<form method="POST" action="{% url 'login' %}">
+<form method="POST">
 <div class="container" style="border: 4px solid rgb(57, 112, 214); padding: 8px;">
     <form action="" method="POST">
         {% csrf_token %}
@@ -18,10 +14,9 @@
     </div>    
     {%endfor%}
 
-   <button type="submit" class="btn btn-primary">Login</button>
+   <button type="submit" class="btn btn-primary" value="signup">Signup</button>
   </form>
 
 </form>
-{%endif%}
 
 {%endblock%}
