--- a/tweetapp/templates/tweetapp/listtweet.html
+++ b/tweetapp/templates/tweetapp/listtweet.html
@@ -5,7 +5,7 @@
     {%for tweet in tweets%}
     <div class="card" style="padding: 5px;">
         <div class="card-header" style="background-color: cornflowerblue;">
-           <h4> {{tweet.nickname}}</h4>
+           <h4> {{tweet.username}}</h4>
         </div>
         <div class="card-body">
             <p class="card-text">{{tweet.message}}</p>
