--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}?next=/">Logout</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'tweetapp:signup' %}">Sign Up</a>
+              </li>
             </ul>
           </div>
         </div>
