--- a/tweetapp/static/tweetapp/customform.css
+++ b/tweetapp/static/tweetapp/customform.css
@@ -1,5 +1,5 @@
 .tweetform{
-    border: 3px solid cornflowerblue;
+    border: 8px solid black;
     padding: 10px;
 }
 
@@ -9,3 +9,4 @@
     height: 100px;
     padding: 10px;
 }
+
