--- a/tweetapp/templates/tweetapp/listtweet.html
+++ b/tweetapp/templates/tweetapp/listtweet.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {%block content%}
-<div class="container">
+<div class="container" style="width: 50%;">
     {%for tweet in tweets%}
     <div class="card" style="padding: 5px;">
         <div class="card-header" style="background-color: cornflowerblue;">
@@ -10,6 +10,9 @@
         <div class="card-body">
             <p class="card-text">{{tweet.message}}</p>
         </div>
+        {%if tweet.username == user%}
+        <a href="{% url 'tweetapp:deletetweet' id=tweet.id %}" class="btn btn-danger">Delete</a>
+        {%endif%}
     </div>
     {%endfor%}
 </div>
